--- a/Android Call Recorder/res/layout/activity_main.xml
+++ b/Android Call Recorder/res/layout/activity_main.xml
@@ -19,4 +19,12 @@
 	    
     </ScrollView>
 
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:visibility="gone"
+        android:id="@+id/txtNoRecords" >
+        
+    </TextView>
+
 </LinearLayout>
