--- a/Android Call Recorder/res/menu/activity_main.xml
+++ b/Android Call Recorder/res/menu/activity_main.xml
@@ -1,21 +1,31 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_about"
-        android:title="@string/menu_about"
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <item
+        android:id="@+id/menu_Enable_record"
+        android:enabled="false"
+        android:icon="@drawable/ic_record_enable"
         android:orderInCategory="100"
+        android:title="@string/menu_Enable_record"/>
+    <item
+        android:id="@+id/menu_Disable_record"
+        android:enabled="false"
+        android:icon="@drawable/ic_record_disable"
+        android:orderInCategory="100"
+        android:title="@string/menu_Disable_record"/>
+    <item
+        android:id="@+id/menu_about"
         android:icon="@drawable/ic_about"
-         />
-    <item android:id="@+id/menu_Enable_record"
-        android:title="@string/menu_Enable_record"
         android:orderInCategory="100"
-        android:enabled="false"
-        android:icon="@drawable/ic_record_enable" />
-    <item android:id="@+id/menu_Disable_record"
-        android:title="@string/menu_Disable_record"
+        android:title="@string/menu_about"/>
+    <item
+        android:id="@+id/menu_see_terms"
+        android:icon="@drawable/ic_menu_example"
         android:orderInCategory="100"
-        android:enabled="false"
-        android:icon="@drawable/ic_record_disable" />
-    <item android:id="@+id/menu_see_terms"
-        android:title="@string/menu_terms"
+        android:title="@string/menu_terms"/>
+    <item
+        android:id="@+id/menu_privacy_policy"
+        android:icon="@drawable/ic_menu_example"
         android:orderInCategory="100"
-        android:icon="@drawable/ic_menu_example" />
+        android:title="@string/menu_privacy_policy"/>
+
 </menu>
