--- a/Android Call Recorder/res/menu/activity_main.xml
+++ b/Android Call Recorder/res/menu/activity_main.xml
@@ -27,5 +27,9 @@
         android:icon="@drawable/ic_menu_example"
         android:orderInCategory="100"
         android:title="@string/menu_privacy_policy"/>
-
+	<item
+        android:id="@+id/menu_delete_all"
+        android:icon="@drawable/ic_delete_all"
+        android:orderInCategory="100"
+        android:title="@string/menu_delete_all"/>
 </menu>
